--- a/lab 1/ManageME/src/components/Navbar.astro
+++ b/lab 1/ManageME/src/components/Navbar.astro
@@ -1,26 +1,40 @@
 ---
+import { UserService } from "../services/UserService";
+
+const user = UserService.getLoggedInUser();
 const links = [
-    { href: "/", label: "Home" },
-    { href: "/about", label: "About" },
-    { href: "/projects", label: "Projects" },
-    { href: "/contact", label: "Contact" },
+  { href: "/", label: "Home" },
+  { href: "/about", label: "About" },
+  { href: "/projects", label: "Projects" },
+  { href: "/contact", label: "Contact" },
 ];
 ---
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="/">ManageME</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                {links.map((link) => (
-                    <li class="nav-item">
-                        <a class="nav-link" href={link.href}>{link.label}</a>
-                    </li>
-                ))}
-            </ul>
-        </div>
+  <div class="container">
+    <a class="navbar-brand" href="/">ManageME</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        {links.map((link) => (
+          <li class="nav-item">
+            <a class="nav-link" href={link.href}>{link.label}</a>
+          </li>
+        ))}
+      </ul>
+      <span class="navbar-text ms-3">
+        Logged in as: {user.firstName} {user.lastName}
+      </span>
     </div>
+  </div>
 </nav>
