--- a/lab 1/ManageME/src/layouts/Layout.astro
+++ b/lab 1/ManageME/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Navbar from "../components/Navbar.astro";
     <title>ManageME</title>
   </head>
   <body>
-    <Navbar />
+    <Navbar client:load />
     <main class="container mt-4">
       <slot />
     </main>
