--- a/lab 1/ManageME/src/pages/index.astro
+++ b/lab 1/ManageME/src/pages/index.astro
@@ -3,6 +3,7 @@ import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import ProjectList from '../components/ProjectList.astro';
 import StoryList from '../components/StoryList';
+import KanbanBoard from "../components/KanbanBoard";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -11,5 +12,6 @@ import StoryList from '../components/StoryList';
 	<!-- <Welcome /> -->
 	<ProjectList />
 	<StoryList client:load />
+	<KanbanBoard client:load />
 	<!-- <Test/> -->
 </Layout>
