--- a/lab 1/ManageME/src/pages/index.astro
+++ b/lab 1/ManageME/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import ProjectList from '../components/ProjectList.astro';
 import StoryList from '../components/StoryList';
 import KanbanBoard from "../components/KanbanBoard";
+import '../styles/styles.css';
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
