--- a/lab 1/ManageME/src/pages/index.astro
+++ b/lab 1/ManageME/src/pages/index.astro
@@ -5,6 +5,7 @@ import StoryList from "../components/StoryList.tsx";
 import KanbanBoard from "../components/KanbanBoard.tsx";
 import Layout from "../layouts/Layout.astro";
 import jwt from "jsonwebtoken";
+import "../styles/styles.css"
 const JWT_SECRET = "your_jwt_secret";
 
 // Server-side check
